--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 /* Add your styles here! */
 h1 { 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Times New Roman', Times, serif, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: larger;
 }
