Minor Changes at Charter (missing translations) and Bio (Photo and Social Media Aesthetics)

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,9 @@ h1 {
     font-family: 'Times New Roman', Times, serif, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: larger;
 }
+.css-1ljz3d3{
+    width: 100%;
+}
 
 /* "home.html" styles */
 .home_title, .home_nav {
