--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 /* Add your styles here! */
 
 h1 {
-    font-family: 'Times New Roman', Times, serif, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: larger;
 }
 
