--- a/src/style.css
+++ b/src/style.css
@@ -32,9 +32,10 @@ a:active {
     text-decoration: none;
 }
 
-.container {
+
+/*.container {
     width: 75%;
-}
+}*/
 
 .button-36 {
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
