--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ h1 {
 }
 
 .css-1ljz3d3 {
-    width: 85%;
+    width: 100%;
 }
 
 
@@ -32,12 +32,11 @@ a:active {
     text-decoration: none;
 }
 
-
-/*.container {
+.container {
     width: 75%;
-}*/
+}
 
-.button-36 {
+*/ .button-36 {
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
     border-radius: 8px;
     border-style: none;
@@ -78,4 +77,8 @@ footer {
 
 footer p {
     padding: 5px;
+}
+
+body footer {
+    width: 100% !important;
 }
