--- a/src/style.css
+++ b/src/style.css
@@ -72,9 +72,9 @@ a:active {
 
 footer {
     text-align: center;
-    background-color: black;
+    background-color: rgb(174, 166, 240);
     font-size: smaller;
-    color: antiquewhite;
+    color: rgb(63, 62, 65);
 }
 
 footer p {
