--- a/src/style.css
+++ b/src/style.css
@@ -18,15 +18,13 @@ h1 {
     text-align: center;
 }
 
-
-/*.t1 {
+.t1 {
     font-size: 26px;
 }
 
 .t2 {
     font-size: 18px;
 }
-*/
 
 a:link,
 a:visited,
