--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ a:active {
     width: 75%;
 }
 
-*/ .button-36 {
+.button-36 {
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
     border-radius: 8px;
     border-style: none;
