--- a/src/style.css
+++ b/src/style.css
@@ -10,15 +10,23 @@ h1 {
 }
 
 .foto-rounded-circle {
-    background-image: url('https://prebi.unlp.edu.ar/wp-content/uploads/sites/31/2020/07/WhatsApp-Image-2020-07-06-at-09.43.33-e1594039767733.jpeg');/*this is the path, if it doesnt work, just got to check the path|*/
-    height: 170px; /* size */
-    width: 170px;/* size */
-    background-position: center center; /* position */ 
-    background-repeat: no-repeat; /* to not repeat the image if it doesnt fit*/
-    background-size: cover; /* adapt the image to the div */
-    border-radius: 50%; /* rounded borders */
-    border: 4px #27a9e1 solid; /* color, we should change it to some orange or red... */
-    } 
+    background-image: url('https://prebi.unlp.edu.ar/wp-content/uploads/sites/31/2020/07/WhatsApp-Image-2020-07-06-at-09.43.33-e1594039767733.jpeg');
+    /*this is the path, if it doesnt work, just got to check the path|*/
+    height: 170px;
+    /* size */
+    width: 170px;
+    /* size */
+    background-position: center center;
+    /* position */
+    background-repeat: no-repeat;
+    /* to not repeat the image if it doesnt fit*/
+    background-size: cover;
+    /* adapt the image to the div */
+    border-radius: 50%;
+    /* rounded borders */
+    border: 4px #27a9e1 solid;
+    /* color, we should change it to some orange or red... */
+}
 
 
 /* "home.html" styles */
@@ -43,11 +51,12 @@ a:active {
     text-decoration: none;
 }
 
-.container {
+
+/*.container {
     width: 75%;
     left: 50%;
     top: 50%;
-}
+}*/
 
 .button-36 {
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
