--- a/src/style.css
+++ b/src/style.css
@@ -98,13 +98,46 @@ footer {
     height: 2.5rem;
 }
 
-
-/*footer p {
+footer p {
     padding: 30px, 0px, 0px, 0px;
-    position: absolute;
-    bottom: 0;
-}*/
+}
 
 body footer {
     width: 100% !important;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+}
+
+.title-card {
+    color: grey;
+    font-size: 18px;
+}
+
+.button-card {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover,
+a:hover {
+    opacity: 0.7;
 }
