--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,10 @@ body footer {
     width: 100% !important;
 }
 
+.card-container {
+    display: flex;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
