--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,7 @@ a:active {
 }
 
 .button-61:not(:disabled) {
-    background-color: #6200ee;
+    background-color: #896cc9;
 }
 
 .button-61:focus {
