--- a/src/style.css
+++ b/src/style.css
@@ -196,7 +196,7 @@ body footer {
     display: inline-block;
     padding: 8px;
     background-color: rgb(255, 255, 255);
-    color: rgb(55, 3, 107);
+    color: #A46BF5;
     text-align: center;
     cursor: pointer;
     width: 100%;
