--- a/src/style.css
+++ b/src/style.css
@@ -186,8 +186,8 @@ body footer {
 }
 
 .title-card {
-    color: grey;
-    font-size: 18px;
+    color: rgb(53, 39, 69);
+    font-size: 25px;
 }
 
 .button-card {
