--- a/src/style.css
+++ b/src/style.css
@@ -180,13 +180,14 @@ body footer {
     max-width: 300px;
     margin: auto;
     text-align: center;
-    background-color: #A46BF5;
+    background-color: #645678;
     color: rgb(255, 255, 255);
     flex: 0 1 24%;
 }
 
 .title-card {
-    color: rgb(53, 39, 69);
+    background-color: #331f69;
+    color: rgb(255, 255, 255);
     font-size: 25px;
 }
 
@@ -196,7 +197,7 @@ body footer {
     display: inline-block;
     padding: 8px;
     background-color: rgb(255, 255, 255);
-    color: #6734ae;
+    color: #642db0;
     text-align: center;
     cursor: pointer;
     width: 100%;
