--- a/src/style.css
+++ b/src/style.css
@@ -186,8 +186,8 @@ body footer {
 }
 
 .card {
-    background-color: #645678;
-    color: rgb(255, 255, 255);
+    background-color: #ffffff;
+    color: rgb(3, 3, 3);
     font-size: 25px;
 }
 
