--- a/src/style.css
+++ b/src/style.css
@@ -187,7 +187,9 @@ body footer {
 .card {
     background-color: #ffffff;
     color: rgb(3, 3, 3);
-    font-size: 25px;
+    font-size: 20px;
+    text-align: center;
+    margin: auto;
 }
 
 .unit-card {
