--- a/src/style.css
+++ b/src/style.css
@@ -186,7 +186,7 @@ body footer {
 }
 
 .card {
-    background-color: #ffffff;
+    background-color: #8d8696;
     color: rgb(3, 3, 3);
     font-size: 20px;
     text-align: center;
