--- a/src/style.css
+++ b/src/style.css
@@ -221,6 +221,6 @@ a:hover {
     opacity: 0.7;
 }
 
-tei-fw [type="catch"] {
-    align-content: flex-end;
+tei-[type="paragraph"] {
+    align-content: center;
 }
