--- a/src/style.css
+++ b/src/style.css
@@ -232,6 +232,6 @@ tei-fw {
 tei-name[type=place] {
     color: red
 }
-.flex-container{display: flex;
+.flex-container{display: flex; flex-direction: column;
  }
  .flex-container div {columns: 30px; text-align: center ;}
