--- a/src/style.css
+++ b/src/style.css
@@ -232,7 +232,7 @@ tei-fw {
 tei-name[type=place] {
     color: red
 }
-.flex-container{display: flex; flex-direction: row;
+.flex-container{display: flex; flex-direction: column;
  }
 
- .flex-container div {text-align: justify;}
+ .flex-container div {text-align: justify; flex-direction: column;}
