--- a/src/style.css
+++ b/src/style.css
@@ -244,7 +244,7 @@ tei-name[type=place] {
   }
   
   .column {
-        float: left;
+        float: center;
         width: 100%;
         padding: 10px;
         height: 300px
