--- a/src/style.css
+++ b/src/style.css
@@ -248,7 +248,7 @@ tei-name[type=place] {
         height: 5px 
     }
 .column2 {
-    float:left;
+    float:right;
         width: 100%;
         padding: 5px;
         height: 5px
