--- a/src/style.css
+++ b/src/style.css
@@ -258,3 +258,7 @@ tei-name[type=place] {
       .div {
         column-count: 2;
       }
+
+    .charter {
+        display: flex; /* or inline-flex */
+      }
