--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,17 @@ a:active {
     text-decoration: none;
 }
 
+tei-choice:hover tei-orig {
+    color: red;
+}
+
+/* tei-orig:hover {
+    display: inline;
+}
+
+tei-orig {
+    display: none;
+} */
 
 /*.container {
     width: 75%;
