--- a/src/CETEIcean.css
+++ b/src/CETEIcean.css
@@ -41,8 +41,8 @@ tei-choice tei-abbr+tei-expan:before,
 tei-choice tei-expan+tei-abbr:before,
 tei-choice tei-sic+tei-corr:before,
 tei-choice tei-corr+tei-sic:before,
-tei-choice tei-orig+tei-reg:before,
-tei-choice tei-reg+tei-orig:before {
+tei-choice tei-reg+tei-orig:before,
+tei-choice tei-orig+tei-reg:before {
     content: " (";
 }
 
@@ -50,8 +50,8 @@ tei-choice tei-abbr+tei-expan:after,
 tei-choice tei-expan+tei-abbr:after,
 tei-choice tei-sic+tei-corr:after,
 tei-choice tei-corr+tei-sic:after,
-tei-choice tei-orig+tei-reg:after,
-tei-choice tei-reg+tei-orig:after {
+tei-choice tei-reg+tei-orig:after,
+tei-choice tei-orig+tei-reg:after {
     content: ")";
 }
 
