--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,13 @@ tei-orig {
     text-align: center;
 }
 
+.bio-text {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 
 /* CSS */
 
