--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,8 @@ h1 {
     /* rounded borders */
     border: 4px #27a9e1 solid;
     /* color, we should change it to some orange or red... */
+    align-self: center;
+    display: inline-block;
 }
 
 
@@ -69,18 +71,26 @@ tei-orig {
 .bio-header {
     background-color: grey;
     align-items: center;
+    text-align: center;
+}
+
+.bio-header>h3 {
+    margin: 2px;
+    margin-block-start: 2px;
+    margin-block-end: 2px;
 }
 
 .bio-text {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .bio-en,
 .bio-es {
-    flex: 50%;
+    flex: 45%;
     text-align: justify;
+    padding: 1%;
 }
 
 
