--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,7 @@ h1 {
     font-size: larger;
 }
 
-.foto-rounded-circle {
-    background-image: url('https://prebi.unlp.edu.ar/wp-content/uploads/sites/31/2020/07/WhatsApp-Image-2020-07-06-at-09.43.33-e1594039767733.jpeg');
-    /*this is the path, if it doesnt work, just got to check the path|*/
+.photo-rounded-circle {
     height: 170px;
     /* size */
     width: 170px;
