--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,7 @@ tei-orig {
     text-align: justify;
     padding: 2%;
     font-size: medium;
+    background-color: rgb(227, 227, 227);
 }
 
 
@@ -140,7 +141,7 @@ tei-orig {
 }
 
 .button-61:not(:disabled) {
-    background-color: #896cc9;
+    background-color: #77659d;
 }
 
 .button-61:focus {
@@ -149,7 +150,7 @@ tei-orig {
 
 .button-61:active {
     box-shadow: rgba(0, 0, 0, .2) 0 5px 5px -3px, rgba(0, 0, 0, .14) 0 8px 10px 1px, rgba(0, 0, 0, .12) 0 3px 14px 2px;
-    background: #A46BF5;
+    background: #8e6fba;
 }
 
 .button-36 {
