styling TEI ( choice and foot)

--- a/src/CETEIcean.css
+++ b/src/CETEIcean.css
@@ -37,7 +37,8 @@
 
 /* Choice elements */
 
-tei-choice tei-abbr+tei-expan:before,
+
+/*tei-choice tei-abbr+tei-expan:before,
 tei-choice tei-expan+tei-abbr:before,
 tei-choice tei-sic+tei-corr:before,
 tei-choice tei-corr+tei-sic:before,
@@ -54,7 +55,6 @@ tei-choice tei-orig+tei-reg:after,
 tei-choice tei-reg+tei-orig:after {
     content: ")";
 }
-
 
 /*Justifyng*/
 
