--- a/src/style.css
+++ b/src/style.css
@@ -341,3 +341,6 @@ tei-name[type=placeGeog] {
         tei-measure[type=num] {
             color: rgb(235, 174, 8);
         }
+        tei-measure[type=distance] {
+            color: rgb(235, 174, 8);
+        }
