--- a/src/style.css
+++ b/src/style.css
@@ -327,12 +327,12 @@ tei-name[type=placeGeog] {
 
 .aboutes{
     flex: 35%;
-    text-align: justify;
+    text-align: left;
     padding: 2%;
     font-size: medium;
-    background-color: rgb(227, 227, 227); float: right; width:40%;}
+    background-color: rgb(227, 227, 227); float: right; width:40%}
 
-.abouten{float: left; width:40%; flex: 35%; text-align: justify; padding: 2%; font-size: medium; background-color: rgb(227, 227, 227);}
+.abouten{float: left; width:40%; flex: 35%; text-align: right; padding: 2%; font-size: medium; background-color: rgb(227, 227, 227);}
 
         tei-measure[type= cardinal] {
             color: rgba(237, 164, 5, 0.945);
