--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,6 @@ h1 {
     font-size: larger;
 }
 
-h3 {
-    align-self: center;
-}
-
 .photo-rounded-circle {
     height: 170px;
     /* size */
@@ -49,6 +45,10 @@ h3 {
 
 .t2 {
     font-size: 18px;
+}
+
+.title-ed {
+    text-align: center;
 }
 
 a:link,
