--- a/src/style.css
+++ b/src/style.css
@@ -316,7 +316,15 @@ tei-name[type=place] {
     color: green;
 }
 
+.place {
+    color: green;
+}
+
 tei-name[type=placeGeog] {
+    color: blue;
+}
+
+.placeGeog {
     color: blue;
 }
 
@@ -383,11 +391,19 @@ tei-measure[type=cardinal] {
 }
 
 tei-measure[type=distance] {
-    color: rgba(82, 153, 223, 0.945);
+    color: rgba(192, 155, 54, 0.945);
+}
+
+.unit {
+    color: rgba(192, 155, 54, 0.945);
 }
 
 tei-measure[type=currency] {
-    color: rgba(21, 219, 190, 0.945);
+    color: rgba(146, 21, 219, 0.945);
+}
+
+.currency {
+    color: rgba(146, 21, 219, 0.945);
 }
 
 tei-measure[type=ordinal] {
